Remove AtomosLauncher